[package]
name = "tiny-bench"
version = "0.1.0"
edition = "2021"
authors = ["Embark <opensource@embark-studios.com>"]
license = "MIT OR Apache-2.0"
description = "A tiny benchmarking library"
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["timer", "bench"]
timer = []
bench = []

[dependencies]

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "time_iterator"
required-features = ["timer"]
[[example]]
name = "time_loop"
required-features = ["timer"]
[[example]]
name = "bad_sort"
required-features = ["bench"]
[[example]]
name = "bench_compare"
required-features = ["bench"]
